// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pix List Controller => When fail request should retun erro=true 1`] = `
<Text>
  comunication fail
</Text>
`;

exports[`Pix List Controller => When screen is not in focus state shoud return empty list 1`] = `
<Text>
  empty list
</Text>
`;

exports[`Pix List Controller => When success request should retun IContrllerData<PixEntity[]> 1`] = `
<Text>
  teste
</Text>
`;
